# dodgetracker

./: .eslintignore  .eslintrc.cjs  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc  README.md  build-backend.js  components.json  drizzle.config.ts  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  template.yaml  tsconfig.json
.github/workflows/: backend.yml  deploy_lambda.yml  eslint_check.yml  prettier_check.yml
app/: layout.tsx  page.tsx
db/: index.ts  schema.ts
lambda/updateDatabase/: api.ts  db.ts  dodges.ts  index.ts  logger.ts  main.ts  players.ts  tsconfig.json  types.ts
lambda/updatePlayers/: index.ts
lambda/updatePlayersAndDodges/: dodges.ts  index.ts  players.ts
public/: riot.txt
scripts/: deploy_riotapi_key.sh  install_service.sh  run_backend.sh  update_riotapi_key.sh
src/: App.tsx  Leaderboard.tsx  autoFetch.ts  data.ts  middleware.ts  regions.ts  seasons.ts  statSites.ts  types.ts
src/app/: Home.tsx  (+6 more)
src/backend/: .gitignore  Cargo.toml  dodges.ts  index.ts  logger.ts  main.ts  players.ts  tsconfig.json  types.ts  util.ts
src/backend/service/: dodgetracker.service
src/backend/src/: apex_tier_players.rs  config.rs  db.rs  dodges.rs  latest_updates.rs  logger.rs  lolpros.rs  main.rs  player_counts.rs  promotions_demotions.rs  riot_api.rs  riot_ids.rs  summoners.rs  util.rs
src/backend/src/entities/: apex_tier_players.rs  demotions.rs  dodges.rs  latest_updates.rs  lol_pros.rs  mod.rs  player_counts.rs  prelude.rs  promotions.rs  riot_ids.rs  sea_orm_active_enums.rs  summoners.rs
(+129 files in other folders)
