[package]
name = "dodgetracker-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
anyhow = "1.0.86"
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.5.0"
riven = "2.54.0"
sea-orm = { version = "^0.12.0", features = [
  "sqlx-mysql",
  "runtime-async-std-native-tls",
  "macros",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
urlencoding = "2.1.3"
chrono = "0.4.38"
flexi_logger = { version = "0.28.5", features = ["async"] }
log = "0.4.22"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-appender = { package = "clia-tracing-appender", version = "0.2" }


[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
